tests/rosetta/out/Java/anagrams.error
javac error: exit status 1
/tmp/TestMochiToJavaanagrams2482190651/001/Anagrams.java:19: error: incompatible types: String cannot be converted to List<String>
                    List<String> tmp = arr.get(j);
                                              ^
/tmp/TestMochiToJavaanagrams2482190651/001/Anagrams.java:21: error: incompatible types: List<String> cannot be converted to String
                    arr.set(j + 1, tmp);
                                   ^
/tmp/TestMochiToJavaanagrams2482190651/001/Anagrams.java:30: error: incompatible types: String cannot be converted to Number
            out = out + ((Number)arr.get(i)).doubleValue();
                                        ^
/tmp/TestMochiToJavaanagrams2482190651/001/Anagrams.java:39: error: incompatible types: String cannot be converted to List<String>
            List<String> min = tmp.get(0);
                                      ^
/tmp/TestMochiToJavaanagrams2482190651/001/Anagrams.java:44: error: incompatible types: String cannot be converted to List<String>
                    min = tmp.get(i);
                                 ^
/tmp/TestMochiToJavaanagrams2482190651/001/Anagrams.java:49: error: incompatible types: List<String> cannot be converted to String
            res.add(min);
                    ^
/tmp/TestMochiToJavaanagrams2482190651/001/Anagrams.java:84: error: incompatible types: String cannot be converted to Number
                    int line = "[" + ((Number)g.get(0)).doubleValue();
                                                   ^
/tmp/TestMochiToJavaanagrams2482190651/001/Anagrams.java:87: error: incompatible types: String cannot be converted to Number
                        line = (int)(line + " " + ((Number)g.get(i)).doubleValue());
                                                                ^
/tmp/TestMochiToJavaanagrams2482190651/001/Anagrams.java:90: error: incompatible types: String cannot be converted to int
                    line = (int)(line + "]");
                                ^
Note: /tmp/TestMochiToJavaanagrams2482190651/001/Anagrams.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
9 errors
